Chrome: Fix accessibility buttons hidden behind canvas when focused

--- a/src/Editor.css
+++ b/src/Editor.css
@@ -82,4 +82,5 @@
 
 .imageEditorContainer .textRendererOutputContainer:focus-within {
 	overflow: visible;
+	z-index: 5;
 }
