--- a/src/tools/SoundUITool.css
+++ b/src/tools/SoundUITool.css
@@ -7,4 +7,5 @@
 
 .js-draw-sound-ui-toggle:focus-within {
     overflow: visible;
+    z-index: 5;
 }
